--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Page 2</title>
+    <link rel="stylesheet" href="./css/styles.css" />
+    <title>Page 1</title>
   </head>
   <body>
-    <section>
-      <a href="./index.html">Go to home</a>
-      <h1>Welcome to page 2</h1>
-    </section>
+    <ul class="gallery"></ul>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.js"></script> -->
+    <script src="./js/1-gallery.js" type="module"></script>
   </body>
 </html>
