--- a/src/2-form.html
+++ b/src/2-form.html
@@ -4,19 +4,21 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/styles.css" />
     <title>Page 3</title>
   </head>
   <body>
     <form class="feedback-form" autocomplete="off">
-      <label>
+      <label class="label-form">
         Email
-        <input type="email" name="email" autofocus />
+        <input class="email-input" type="email" name="email" autofocus />
       </label>
-      <label>
+      <label class="label-form">
         Message
-        <textarea name="message" rows="8"></textarea>
+        <textarea class="textarea-message" name="message" rows="8"></textarea>
       </label>
-      <button type="submit">Submit</button>
+      <button class="submit-button" type="submit">Submit</button>
     </form>
+    <script src="./js/2-form.js" type="module"></script>
   </body>
 </html>
